# spanav

./: .gitignore  LICENSE  Pipfile  README.md  RUN_PIPELINE.ipynb  config.template.ini  pyproject.toml  requirements.txt
Preprocessing/: 01_clean_eeg.ipynb  02_extract_behavior.ipynb  03_extract_eeg.ipynb  behavior_to_eeg.py  compare_movement_definitions.ipynb  extract_eeg.py  inspect_artifacts.ipynb  movement_definition.py  preprocess_eeg.py
notebooks/preprocessing/: 02_extract_behavior.ipynb  03_extract_eeg.ipynb  compare_movement_definitions.ipynb  impedances_timestamps.ipynb  raw_data_check.ipynb
notebooks/processing/: 04_datasets.ipynb  05_oscillatory_features.ipynb
preprocessing/: movement_definition.py
processing/: 04_datasets.ipynb  05_data_quality.ipynb  05_oscillatory_features.ipynb  process_eeg.py  rs_analysis.ipynb
scripts/analysis/: run_cluster_tests.py  run_lmm.py  run_lmms.py
scripts/preprocessing/: run_beh_extraction.py  run_data_transfer.py  run_eeg_extraction.py  run_provisional_preproc.py  run_rs_preprocessing.py
scripts/processing/: run_spectral_processing.py
scripts/visualization/: run_psd_plots.py  run_tfr_plots.py
spanav_eeg_utils/: BIDSConverter_EEG_Automated.py  config_utils.py  custom_BIDS_converter.py  io_utils.py  parsing_utils.py  plot_utils.py  spanav_utils.py  spectral_utils.py
src/spanav_eeg_utils/: comp_utils.py  config_utils.py  io_utils.py  (+6 more)
tests/: test_io_utils.py  test_parsing_utils.py  test_spectral_utils.py  test_tfr.py
utils/: gen_utils.py  spectral_utils.py
visualization/: vis_eeg.py
viz/: vis_eeg.py
(+24 files in other folders)
