[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spanav-tbi"
version = "0.0.0"
dependencies = [
    "numpy",
    "pandas",
    "mne",
    "matplotlib",
    "fooof",
    "yasa",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["spanav_eeg_utils*"]