[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spanav-tbi"
version = "0.0.0"
dependencies = [
    "numpy",
    "pandas",
    "mne",
    "matplotlib",
    "fooof",
    "yasa",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spanav_eeg_utils*", "spanav_tbi*"]