[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spanav"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "mne",
    "mne-bids",
    "matplotlib",
    "seaborn",
    "autoreject",
    "fooof",
    "yasa",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "PyQt6",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spanav_eeg_utils*", "spanav_tbi*"]